# Backend-SulTurismo

./: Pipfile  db.sqlite3  manage.py  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
sulturismo/: asgi.py  settings.py  urls.py  wsgi.py
